--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,15 +13,15 @@ jobs:
       - run: docker build -t stvncharles/react-test -f ./client/Dockerfile.dev ./client
       - run: docker run -e CI=true stvncharles/react-test npm test
  
-      - run: docker build -t stvncharles/multi-client-10-14 ./client
-      - run: docker build -t stvncharles/multi-nginx-10-14 ./nginx
-      - run: docker build -t stvncharles/multi-server-10-14 ./server
-      - run: docker build -t stvncharles/multi-worker-10-14 ./worker
+      - run: docker build -t stvncharles/multi-client ./client
+      - run: docker build -t stvncharles/multi-nginx ./nginx
+      - run: docker build -t stvncharles/multi-server ./server
+      - run: docker build -t stvncharles/multi-worker ./worker
  
-      - run: docker push stvncharles/multi-client-10-14
-      - run: docker push stvncharles/multi-nginx-10-14
-      - run: docker push stvncharles/multi-server-10-14
-      - run: docker push stvncharles/multi-worker-10-14
+      - run: docker push stvncharles/multi-client
+      - run: docker push stvncharles/multi-nginx
+      - run: docker push stvncharles/multi-server
+      - run: docker push stvncharles/multi-worker
  
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
@@ -31,9 +31,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: multi-gh
-          environment_name: Multigh-env
-          existing_bucket_name: elasticbeanstalk-us-east-1-923445559289
-          region: us-east-1
+          application_name: multi-docker
+          environment_name: Multidocker-env
+          existing_bucket_name: elasticbeanstalk-ap-southeast-1-557474292789
+          region: ap-southeast-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
